[tool.poetry]
name = "fibery"
version = "0.3.0"
homepage = "https://github.com/sergio-bershadsky/fibery"
repository = "https://github.com/sergio-bershadsky/fibery"
description = "Python SDK for working with Fibery.io"
authors = ["Sergio Bershadsky <sergio.bershadsky@gmail.com>"]
include = ["fibery/console/commands/js/*.js"]

[tool.poetry.scripts]
fibery = 'fibery.console.main:main'

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
requests = "^2.25.1"
aiohttp = "^3.7.4"
pyppeteer = "^0.2.5"
tabulate = "^0.8.9"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"
pytest-asyncio = "^0.14.0"
pytest-docker-fixtures = "^1.3.11"
pre-commit = "^2.12.1"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.11.1"
pytest-timeout = "^1.4.2"
isort = "^5.8.0"
flake8 = "^3.9.1"
autoflake = "^1.4"
mccabe = "^0.6.1"
pytest-mock = "^3.6.1"
pytest-profiling = "^1.7.0"
requests-mock = "^1.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = [
  "fibery",
]
skip_glob = ["*/setup.py"]
filter_files = true

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.log
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--timeout=0.01"
testpaths = [
    "tests"
]
